@@ -1,3 +1,5 @@
+2005/10/12 -- released version 20051012_trunk
+
 * avoid creating new RRD files as the user running 'smokeping --reload'
   -- niko, reported by Stefan Schmidt <s.schmidt *mcbone.net>, 
   http://bugs.debian.org/333373
